# Planiva-MVP-V1

./: .gitignore  BACKEND_DEPLOYMENT.md  DELIVERY_SUMMARY.txt  DEMO_COMPLETE_PLATFORM.md  DEMO_INDEX.md  DEMO_INSTRUCTIONS.md  DEMO_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  Event_Planning_Agent_v2_Complete_Documentation.md  PLATFORM_FEATURES_OVERVIEW.md  PRESENTATION_GUIDE.md  QUICK_DEMO_GUIDE.md  README_DEMO.md  RENDER_DEPLOYMENT_INSTRUCTIONS.md  RENDER_FINAL_CONFIG.md  RENDER_FIX.md  demo_complete_platform.py  demo_output_20251028_235621.txt  demo_output_20251029_002103.txt  demo_output_20251029_004155.txt  demo_output_20251029_083534.txt  demo_output_20251029_104020.txt  event_blueprint_20251028_225752.json  event_blueprint_20251028_225916.json  event_blueprint_20251028_232613.json  event_blueprint_20251028_235617.json  event_blueprint_20251029_002059.json  event_blueprint_20251029_004151.json  event_blueprint_20251029_083530.json  event_blueprint_20251029_104016.json  priya_rohit_wedding_blueprint_20251008_114737.json  priya_rohit_wedding_plan_20251008_114357.json  priya_rohit_wedding_summary_20251008_114737.txt  run_complete_demo.bat  run_complete_demo.py  run_demo.bat
event_planning_agent_v2/: .env.development  .env.performance  .env.production  .env.template  .gitignore  Procfile  README.md  __init__.py  demo_priya_rohit.py  main.py  pyproject.toml  pytest.ini  render.yaml  render_start.sh  requirements.txt  requirements_demo.txt  run_end_to_end_validation.py  run_integration_tests.py  test_migration_simple.py  wsgi.py
event_planning_agent_v2/agents/: __init__.py  blueprint.py  budgeting.py  orchestrator.py  sourcing.py  timeline.py
event_planning_agent_v2/api/: __init__.py  app.py  crew_integration.py  middleware.py  routes.py  schemas.py
event_planning_agent_v2/config/: __init__.py  config_manager.py  mcp_config.dev.json  mcp_config.json  mcp_config.prod.json  settings.py  task_management_config.py
event_planning_agent_v2/crm/: ANALYTICS_IMPLEMENTATION.md  API_DOCUMENTATION.md  ARCHITECTURE.md  CREDENTIAL_ROTATION_GUIDE.md  CRM_CONFIGURATION_README.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION_INDEX.md  EXTERNAL_SERVICES_SETUP.md  MONITORING_IMPLEMENTATION.md  MONITORING_README.md  MONITORING_SUMMARY.md  PREFERENCE_MANAGEMENT_IMPLEMENTATION.md  QUICK_START_CONFIG.md  README.md  REDIS_CACHING_README.md  SECURITY_IMPLEMENTATION.md  SECURITY_README.md  TASK_15_IMPLEMENTATION_SUMMARY.md  TASK_17_DOCUMENTATION_SUMMARY.md  TROUBLESHOOTING_GUIDE.md  __init__.py  alerting_rules.py  analytics.py  api_connector.py  cache_manager.py  canspam_compliance.py  config.py  dashboard.py  email_sub_agent.py  email_template_system.py  encryption.py  export.py  gdpr_compliance.py  health_check.py  logging_config.py  messaging_sub_agent.py  metrics.py  models.py  monitoring_init.py  orchestrator.py  (+6 more)
event_planning_agent_v2/database/: README_MIGRATION.md  README_TASK_MANAGEMENT_REPOSITORY.md  (+17 more)
(+342 files in other folders)
